After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749318 - dtlsenc: Memory leak
dtlsenc: Memory leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-13 13:40 UTC by Jose Antonio Santos Cadenas
Modified: 2015-05-13 16:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
dtlsenc: Fix memory leak while setting connection-id (825 bytes, patch)
2015-05-13 13:40 UTC, Jose Antonio Santos Cadenas
committed Details | Review
dtlsenc: Fix memory leak releasing connection_id (809 bytes, patch)
2015-05-13 14:00 UTC, Jose Antonio Santos Cadenas
committed Details | Review

Description Jose Antonio Santos Cadenas 2015-05-13 13:40:15 UTC
Created attachment 303310 [details] [review]
dtlsenc: Fix memory leak while setting connection-id

Attached a patch to solve the problem.

Additionally shouldn't connection_id be protected by a mutex, I let this way because it was unprotected but I think it should be protected by a mutex.
Comment 1 Jose Antonio Santos Cadenas 2015-05-13 14:00:50 UTC
Created attachment 303313 [details] [review]
dtlsenc: Fix memory leak releasing connection_id

I found that connection_id is also not released on finalize function.
Comment 2 Sebastian Dröge (slomo) 2015-05-13 16:15:32 UTC
And yes, it should probably be protected by a mutex :)

commit aae1a5e2cefa626665d5ddfc869fe6aefa1b99ee
Author: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Date:   Wed May 13 15:59:48 2015 +0200

    dtlsenc: Fix memory leak releasing connection_id
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749318

commit 6b0183b7bf0f0eb067c182f47f4b91d50a13f093
Author: Jose Antonio Santos Cadenas <santoscadenas@gmail.com>
Date:   Wed May 13 15:33:49 2015 +0200

    dtlsenc: Fix memory leak while setting connection-id
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749318