dtlsenc: Fix memory leak while setting connection-id

https://bugzilla.gnome.org/show_bug.cgi?id=749318